# cassette_deck

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
.github/workflows/: cmake.yml
ctrlseq/: dcs.h
examples/: build.tape  color.tape  full_build.tape  hello.tape  meta.tape  theme_default_dark.tape  theme_default_light.tape
src/: color.h  parse.h  terminal.h
src/tape_parser/: parser_util.cpp  parser_util.hpp  tape_parser.cpp  tape_parser.hpp  tape_parser.test.cpp
src/tape_player/: tape_player.cpp  tape_player.h
src/x/: x.h  xstubs.c  yaftx.c
themes/: classic.yaml
tool/: theme_generator.cpp
x/: x.h  yaftx.c
